# c-study

base/: CMakeLists.txt  build.sh
base/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake  main
base/include/: base_date_type.h  conStructors.h  function.h  if_while_for.h  inhertance.h  log.h  ptr_study.h  static_study.h  virtual_function.h
base/src/: 1_base_date_type.cpp  2_function.cpp  3_if_while_for.cpp  4_ptr.cpp  5_static.cpp  6_conAndDesStructors.cpp  7_inheritance.cpp  8_virtual_function.cpp  Main.cpp  log.cpp
